kubernetes/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-backend-prod
  labels:
    app: springboot-backend
    env: prod
spec:
  replicas: 1   # Multiple pods for high availability
  selector:
    matchLabels:
      app: springboot-backend
      env: prod
  template:
    metadata:
      labels:
        app: springboot-backend
        env: prod
    spec:
      containers:
        - name: springboot-backend
          image:  <ACR_NAME>.azurecr.io/<IMAGE_NAME>:<TAG>   # ACR image
          ports:
            - containerPort: 8080
#          resources:
#            requests:
#              cpu: "250m"
#              memory: "512Mi"
#            limits:
#              cpu: "500m"
#              memory: "1Gi"
